--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "mongo-queries",
   "version": "0.0.0",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
-    "node-cmd": "^3.0.0"
+    "node-cmd": "^3.0.0",
+    "prompt": "^1.0.0"
   }
 }
